--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,5 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Deploy application
+    - run: git add remote heroku https://git.heroku.com/stormy-stream-66701.git
     - run: git push heroku main
