--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Deploy application
+    - env: HEROKU_AUTH_TOKEN:${{secrets.HEROKU_AUTH_TOKEN}}
     - run: 
-        git add remote heroku https://git.heroku.com/stormy-stream-66701.git
-    - run: 
+        git add remote heroku https://heroku:$HEROKU_AUTH_TOKEN@git.heroku.com/stormy-stream-66701.git
         git push heroku main
