--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+#     - run: npm run build --if-present
+#     - run: npm test
     - name: Deploy application
-    - uses: actions/heroku@master
     - env: HEROKU_AUTH_TOKEN:${{secrets.HEROKU_AUTH_TOKEN}}
     - run: 
         git add remote heroku https://heroku:$HEROKU_AUTH_TOKEN@git.heroku.com/stormy-stream-66701.git
