--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-#     - run: npm run build --if-present
-#     - run: npm test
+    - name: install dependencies
+    - run: 
+        npm ci
+        npm run build --if-present 
+        npm test
     - name: Deploy application
     - env: HEROKU_AUTH_TOKEN:${{secrets.HEROKU_AUTH_TOKEN}}
     - run: 
