--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
         npm ci
         npm run build --if-present 
         npm test
-      name: deploy
-      env: HEROKU_AUTH_TOKEN:${{secrets.HEROKU_AUTH_TOKEN}}
-      run: 
+    - name: deploy
+    - env: HEROKU_AUTH_TOKEN:${{secrets.HEROKU_AUTH_TOKEN}}
+    - run: 
         git add remote heroku https://heroku:$HEROKU_AUTH_TOKEN@git.heroku.com/stormy-stream-66701.git
         git push heroku main
