--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,13 +22,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-#     - name: install dependencies
-    - run: 
+    - name: install dependencies
+      run: 
         npm ci
         npm run build --if-present 
         npm test
     - name: deploy
       env: HEROKU_AUTH_TOKEN:${{secrets.HEROKU_AUTH_TOKEN}}
       run: 
-        git add remote heroku https://heroku:$HEROKU_AUTH_TOKEN@git.heroku.com/stormy-stream-66701.git
+        git remote add heroku https://heroku:$HEROKU_AUTH_TOKEN@git.heroku.com/stormy-stream-66701.git
         git push heroku main
