--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,5 +31,5 @@ jobs:
 #       env: 
 #         HEROKU_AUTH_TOKEN: ${{secrets.HEROKU_AUTH_TOKEN}}
       run: 
-        git remote add heroku https://heroku:${{secrets.HEROKU_AUTH_TOKEN}}@git.heroku.com/stormy-stream-66701.git
+        git remote add heroku "https://heroku:${{secrets.HEROKU_AUTH_TOKEN}}@git.heroku.com/stormy-stream-66701.git"
         git push heroku main -f
