--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,4 @@ jobs:
       run: 
         git remote add heroku https://heroku:${{secrets.HEROKU_AUTH_TOKEN}}@git.heroku.com/stormy-stream-66701.git
     - name: deploy
-      run: git push heroku HEAD:main -f
+      run: git push heroku main -f
